# DTEAM-django-practical-test

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
src/CVProject/: celery.py  settings.py  urls.py
src/api/: serializers.py  tests.py  urls.py  views.py
src/audit/: middleware.py  models.py  tests.py  urls.py  views.py
src/audit/migrations/: 0001_initial.py
src/main/: admin.py  models.py  tests.py  urls.py  views.py
src/main/fixtures/: cv_fixture.json
src/main/migrations/: 0001_initial.py
src/main/tasks/: email_tasks.py
src/services/: ai_translate_service.py  email_service.py  pdf_service.py
src/templates/: base.html  base_wo_navbar.html
src/templates/audit/: logs_list_view.html
src/templates/common/: _navbar.html
src/templates/main/: cv_detail_view.html  cv_list_view.html  cv_pdf_template.html  settings.html
